[gd_scene load_steps=26 format=3 uid="uid://b4t8u3u64xey6"]

[ext_resource type="Script" path="res://scripts/viewer_module.gd" id="1_0gjf0"]
[ext_resource type="Script" path="res://scripts/ViewerCheckBox.gd" id="2_o3dpx"]
[ext_resource type="Script" path="res://scripts/SequenceIDLabel.gd" id="3_3jwgy"]
[ext_resource type="Script" path="res://scripts/SubViewport1.gd" id="4_xiit2"]
[ext_resource type="Script" path="res://scripts/line.gd" id="5_240ji"]
[ext_resource type="Script" path="res://scripts/Cursor.gd" id="5_v7rvh"]
[ext_resource type="Script" path="res://scripts/25.gd" id="6_6lys4"]
[ext_resource type="Script" path="res://scripts/ZoomSlider.gd" id="7_ly6cb"]
[ext_resource type="Script" path="res://scripts/PanSlider.gd" id="8_505dv"]
[ext_resource type="Texture2D" uid="uid://8x3bxdpkmqgh" path="res://textures/left_arrow_32_32.png" id="9_d4c55"]
[ext_resource type="Texture2D" uid="uid://e66olyo03to" path="res://textures/right_arrow_32_32.png" id="10_d5kmf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lk4of"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y68on"]
shading_mode = 0
albedo_color = Color(0.152941, 0.152941, 0.152941, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_corah"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a3d6j"]
shading_mode = 0
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true

[sub_resource type="ArrayMesh" id="ArrayMesh_sui0p"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_oa4uq"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_o24gn"]
sky_material = SubResource("ProceduralSkyMaterial_oa4uq")

[sub_resource type="Environment" id="Environment_sm60y"]
background_mode = 1
sky = SubResource("Sky_o24gn")
tonemap_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r23nq"]
shading_mode = 0
albedo_color = Color(0.427451, 0.427451, 0.427451, 1)

[sub_resource type="ArrayMesh" id="ArrayMesh_lc8jo"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nbff3"]
shading_mode = 0
albedo_color = Color(0.0980392, 0.0980392, 0.0980392, 1)

[sub_resource type="QuadMesh" id="QuadMesh_jtuww"]
size = Vector2(10000, 100)
center_offset = Vector3(0, -100, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mmovo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lipju"]

[node name="ViewerModule" type="VBoxContainer" groups=["ViewerModules"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_0gjf0")

[node name="TitleAndButton" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="TitleAndButton"]
layout_mode = 2
script = ExtResource("2_o3dpx")

[node name="SequenceIDLabel" type="Label" parent="TitleAndButton"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_lk4of")
script = ExtResource("3_3jwgy")

[node name="Viewer1HBox" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="Viewer1HBox"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="Viewer1HBox/SubViewportContainer"]
own_world_3d = true
handle_input_locally = false
size = Vector2i(1242, 870)
render_target_update_mode = 4
script = ExtResource("4_xiit2")

[node name="Node3D" type="Node3D" parent="Viewer1HBox/SubViewportContainer/SubViewport"]

[node name="Camera3D" type="Camera3D" parent="Viewer1HBox/SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 342.35)
cull_mask = 1048573
projection = 1
size = 300.0

[node name="Cursor" type="MeshInstance3D" parent="Viewer1HBox/SubViewportContainer/SubViewport/Node3D/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -351.354)
material_overlay = SubResource("StandardMaterial3D_y68on")
cast_shadow = 0
mesh = SubResource("ArrayMesh_corah")
script = ExtResource("5_v7rvh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Viewer1HBox/SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -100, 0)
material_overlay = SubResource("StandardMaterial3D_a3d6j")
cast_shadow = 0
mesh = SubResource("ArrayMesh_sui0p")
script = ExtResource("5_240ji")

[node name="WorldEnvironment" type="WorldEnvironment" parent="Viewer1HBox/SubViewportContainer/SubViewport/Node3D"]
environment = SubResource("Environment_sm60y")

[node name="YScale" type="MeshInstance3D" parent="Viewer1HBox/SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.87563)
material_overlay = SubResource("StandardMaterial3D_r23nq")
mesh = SubResource("ArrayMesh_lc8jo")
script = ExtResource("6_6lys4")

[node name="Below25" type="MeshInstance3D" parent="Viewer1HBox/SubViewportContainer/SubViewport/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -14.8143)
material_overlay = SubResource("StandardMaterial3D_nbff3")
mesh = SubResource("QuadMesh_jtuww")

[node name="VSeparator" type="VSeparator" parent="Viewer1HBox"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_mmovo")

[node name="ZoomSlider" type="VSlider" parent="Viewer1HBox"]
layout_mode = 2
min_value = 1.0
max_value = 2000.0
step = 0.1
value = 1.0
exp_edit = true
script = ExtResource("7_ly6cb")

[node name="VSeparator2" type="VSeparator" parent="Viewer1HBox"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_mmovo")

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_lipju")

[node name="PanBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PanStepLeft" type="Button" parent="PanBox"]
layout_mode = 2
icon = ExtResource("9_d4c55")

[node name="PanStepRight" type="Button" parent="PanBox"]
layout_mode = 2
icon = ExtResource("10_d5kmf")

[node name="PanSlider" type="HSlider" parent="PanBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
step = 0.001
script = ExtResource("8_505dv")

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxEmpty_lipju")

[connection signal="check" from="." to="TitleAndButton/CheckBox" method="_on_viewer_module_check"]
[connection signal="forward_map_clicked" from="." to="PanBox/PanSlider" method="_on_viewer_module_forward_map_clicked"]
[connection signal="forward_match_ui" from="." to="Viewer1HBox/ZoomSlider" method="_on_viewer_module_forward_match_ui"]
[connection signal="forward_match_ui" from="." to="PanBox/PanSlider" method="_on_viewer_module_forward_match_ui"]
[connection signal="forward_uncheck" from="." to="TitleAndButton/CheckBox" method="_on_viewer_module_forward_uncheck"]
[connection signal="foward_line" from="." to="Viewer1HBox/SubViewportContainer/SubViewport/Node3D/MeshInstance3D" method="_on_viewer_module_foward_line"]
[connection signal="toggled" from="TitleAndButton/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="gui_input" from="Viewer1HBox/SubViewportContainer" to="Viewer1HBox/SubViewportContainer/SubViewport" method="_on_sub_viewport_container_gui_input"]
[connection signal="size_changed" from="Viewer1HBox/SubViewportContainer/SubViewport" to="Viewer1HBox/SubViewportContainer/SubViewport" method="_on_size_changed" flags=18]
[connection signal="set_pan_slider_bounds" from="Viewer1HBox/SubViewportContainer/SubViewport/Node3D/MeshInstance3D" to="PanBox/PanSlider" method="_on_mesh_instance_3d_set_pan_slider_bounds"]
[connection signal="value_changed" from="Viewer1HBox/ZoomSlider" to="Viewer1HBox/ZoomSlider" method="_on_value_changed"]
[connection signal="button_up" from="PanBox/PanStepLeft" to="PanBox/PanSlider" method="_on_pan_step_left_button_up"]
[connection signal="button_up" from="PanBox/PanStepRight" to="PanBox/PanSlider" method="_on_pan_step_right_button_up"]
[connection signal="value_changed" from="PanBox/PanSlider" to="PanBox/PanSlider" method="_on_value_changed"]
